--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 			<h1>hello i'm Renz</h1>
 			<p><span class="slant-quote">"The best way to predict the future is to create it."</span><br><i>-Abraham Lincoln</i></p>
 			<h3 class="cd-headline clip is-full-width">
-				<span> Welcome to My Portfolio </span>
+				<span> Welcome to My Portfolio </span><br><br>
 				<span class="cd-words-wrapper">
 					<b class="is-visible">Web Developer</b>
 					<b>UI/UX Designer</b>
