--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               <a class="nav-link js-scroll-trigger" href="#services">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+              <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
             </li>
 			<li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -219,10 +219,10 @@
         </div><!-- end container -->
     </div><!-- end section -->
 	
-	<div id="portfolio" class="section lb">
+	<div id="projects" class="section lb">
 		<div class="container">
 			<div class="section-title text-left">
-                <h3>Portfolio</h3>
+                <h3>Projects</h3>
                 <p>These are the systems I work on, showcasing my expertise in developing effective solutions. </p>
             </div><!-- end title -->
 			
@@ -354,7 +354,7 @@
                     <p class="footer-links">
                         <a href="#">Home</a>
                         <a href="#services">Services</a>
-                        <a href="#portfolio">Portfolio</a>
+                        <a href="#projects">Projects</a>
                         <a href="#contact">Contact</a>
                     </p>
                     <p class="footer-company-name">All Rights Reserved. &copy; 2024 <a href="#">Renz</a>
