--- a/index.html
+++ b/index.html
@@ -27,8 +27,12 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/custom.css">
 	<script src="js/modernizr.js"></script> <!-- Modernizr -->
-    <!-- ======= Ionicons ======= -->
+    <!-- Ionicons  -->
     <link rel="stylesheet" href="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.min.css">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <!-- Simple Icons for specific tech logos -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons.min.css">
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -59,6 +63,12 @@
           <ul class="navbar-nav text-uppercase ml-auto">
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger active" href="#home">Home</a>
+            </li>
+	    <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" href="#about">About</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" href="#technologies">Technologies</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#services">Services</a>
@@ -146,6 +156,73 @@
                     <div class="right-box-pro wow fadeIn">
                         <img src="uploads/about_04.jpeg" alt="" class="img-fluid img-rounded">
                     </div><!-- end media -->
+                </div><!-- end col -->
+            </div><!-- end row -->
+        </div><!-- end container -->
+    </div><!-- end section -->
+
+    <div id="technologies" class="section lb">
+        <div class="container">
+            <div class="section-title text-left">
+                <h3>Technologies</h3>
+                <p> I specialize in a wide range of technologies to deliver high-quality web development services. Whether it's building robust backends, crafting intuitive frontends, or managing full-stack applications, I have the expertise to bring your projects to life.
+                </p>
+            </div><!-- end title -->
+    
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="services-inner-box">
+                        <div class="ser-icon">
+                            <i class="fab fa-laravel" style="font-size: 60px; color: #ff2d20;"></i>
+                        </div>
+                        <h2>Laravel</h2>
+                        <p>Building secure, scalable, and efficient web applications using the powerful Laravel framework.</p>
+                    </div>
+                </div><!-- end col -->
+                <div class="col-md-4">
+                    <div class="services-inner-box">
+                        <div class="ser-icon">
+                            <i class="fab fa-php" style="font-size: 60px; color: #777bb3;"></i>
+                        </div>
+                        <h2>PHP</h2>
+                        <p>Developing dynamic backend systems with PHP, handling everything from database operations to API integrations.</p>
+                    </div>
+                </div><!-- end col -->
+                <div class="col-md-4">
+                    <div class="services-inner-box">
+                        <div class="ser-icon">
+                            <i class="fab fa-js-square" style="font-size: 60px; color: #f7df1e;"></i>
+                        </div>
+                        <h2>JavaScript</h2>
+                        <p>Developing dynamic, interactive websites and applications with modern JavaScript frameworks and libraries.</p>
+                    </div>
+                </div><!-- end col -->
+                <div class="col-md-4">
+                    <div class="services-inner-box">
+                        <div class="ser-icon">
+                            <i class="fab fa-html5" style="font-size: 60px; color: #e34c26;"></i>
+                        </div>
+                        <h2>HTML</h2>
+                        <p>Building the structure and content of web applications using semantic HTML5 elements for accessibility and SEO.</p>
+                    </div>
+                </div><!-- end col -->
+                <div class="col-md-4">
+                    <div class="services-inner-box">
+                        <div class="ser-icon">
+                            <i class="fab fa-css3-alt" style="font-size: 60px; color: #264de4;"></i>
+                        </div>
+                        <h2>CSS</h2>
+                        <p>Creating beautiful, responsive layouts with CSS, focusing on design, performance, and user experience across devices.</p>
+                    </div>
+                </div><!-- end col -->
+                <div class="col-md-4">
+                    <div class="services-inner-box">
+                        <div class="ser-icon">
+                            <i class="fab fa-vuejs" style="font-size: 60px; color: #42b883;"></i>
+                        </div>
+                        <h2>Vue.js</h2>
+                        <p>Crafting reactive and fast user interfaces with Vue.js, ensuring seamless user experiences on all devices.</p>
+                    </div>
                 </div><!-- end col -->
             </div><!-- end row -->
         </div><!-- end container -->
@@ -353,6 +430,8 @@
                 <div class="footer-left">
                     <p class="footer-links">
                         <a href="#">Home</a>
+		    	<a href="#about">About</a>
+                        <a href="#technologies">Technologies</a>
                         <a href="#services">Services</a>
                         <a href="#projects">Projects</a>
                         <a href="#contact">Contact</a>
