--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@
                         <div class="hero_social">
                             <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>&nbsp;&nbsp;
                             <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>&nbsp;&nbsp;
-                            <a href="https://github.com/Renz211999" target="_blank"><ion-icon name="logo-github"></ion-icon></a>&nbsp;&nbsp;
+                            <a href="https://github.com/rnatividad99" target="_blank"><ion-icon name="logo-github"></ion-icon></a>&nbsp;&nbsp;
                             <a href="https://www.linkedin.com/in/renznatividad/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
                         </div>
                         
-                        <a href="https://github.com/Renz211999/Renz211999.github.io/blob/b09450e4789cfa388ca9a7c61b6a087c3112772d/Natividad%2C%20Renz%20Alvin%20-%20CV.pdf" target="_blank" class="sim-btn btn-hover-new" data-text="Download CV"><span>Download CV</span></a>
+                        <a href="https://github.com/rnatividad99/rnatividad99.github.io/blob/001a410a96899590a343ed2e04155fe1a0f960f4/Natividad%2C%20Renz%20Alvin%20-%20CV.pdf" target="_blank" class="sim-btn btn-hover-new" data-text="Download CV"><span>Download CV</span></a>
                         <a href="https://mail.google.com/mail/?view=cm&fs=1&to=rnatividad1999@gmail.com" target="_blank" class="sim-btn btn-hover-new" data-text="Send Message"><span>Send Message</span></a>
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
@@ -382,10 +382,10 @@
                                         <p class="help-block text-danger"></p>
                                     </div>
                                     <div class="form-group">
-                                        <a href="https://github.com/Renz211999" target="_blank">
+                                        <a href="https://github.com/rnatividad99" target="_blank">
                                             <ion-icon name="logo-github"></ion-icon>
                                         </a>
-                                            Renz211999
+                                            rnatividad99
                                         <p class="help-block text-danger"></p>
                                     </div>
                                     <div class="form-group">
