--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             </div><!-- end title -->
     
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-4 d-flex">
                     <div class="services-inner-box">
                         <div class="ser-icon">
                             <i class="fab fa-laravel" style="font-size: 60px; color: #ff2d20;"></i>
@@ -179,7 +179,7 @@
                         <p>Building secure, scalable, and efficient web applications using the powerful Laravel framework.</p>
                     </div>
                 </div><!-- end col -->
-                <div class="col-md-4">
+                <div class="col-md-4 d-flex">
                     <div class="services-inner-box">
                         <div class="ser-icon">
                             <i class="fab fa-php" style="font-size: 60px; color: #777bb3;"></i>
@@ -188,7 +188,7 @@
                         <p>Developing dynamic backend systems with PHP, handling everything from database operations to API integrations.</p>
                     </div>
                 </div><!-- end col -->
-                <div class="col-md-4">
+                <div class="col-md-4 d-flex">
                     <div class="services-inner-box">
                         <div class="ser-icon">
                             <i class="fab fa-js-square" style="font-size: 60px; color: #f7df1e;"></i>
@@ -197,7 +197,7 @@
                         <p>Developing dynamic, interactive websites and applications with modern JavaScript frameworks and libraries.</p>
                     </div>
                 </div><!-- end col -->
-                <div class="col-md-4">
+                <div class="col-md-4 d-flex">
                     <div class="services-inner-box">
                         <div class="ser-icon">
                             <i class="fab fa-html5" style="font-size: 60px; color: #e34c26;"></i>
@@ -206,7 +206,7 @@
                         <p>Building the structure and content of web applications using semantic HTML5 elements for accessibility and SEO.</p>
                     </div>
                 </div><!-- end col -->
-                <div class="col-md-4">
+                <div class="col-md-4 d-flex">
                     <div class="services-inner-box">
                         <div class="ser-icon">
                             <i class="fab fa-css3-alt" style="font-size: 60px; color: #264de4;"></i>
@@ -215,7 +215,7 @@
                         <p>Creating beautiful, responsive layouts with CSS, focusing on design, performance, and user experience across devices.</p>
                     </div>
                 </div><!-- end col -->
-                <div class="col-md-4">
+                <div class="col-md-4 d-flex">
                     <div class="services-inner-box">
                         <div class="ser-icon">
                             <i class="fab fa-vuejs" style="font-size: 60px; color: #42b883;"></i>
@@ -238,7 +238,7 @@
             </div><!-- end title -->
 
             <div class="row">
-				<div class="col-md-4">
+				<div class="col-md-4 d-flex">
                     <div class="services-inner-box">
 						<div class="ser-icon">
 							<i class="flaticon-seo"></i>
@@ -247,7 +247,7 @@
 						<p>I create tailored websites using the latest technologies, ensuring they are functional, secure, and scalable for your needs.</p>
 					</div>
                 </div><!-- end col -->
-                <div class="col-md-4">
+                <div class="col-md-4 d-flex">
                     <div class="services-inner-box">
 						<div class="ser-icon">
 							<i class="flaticon-development"></i>
@@ -256,7 +256,7 @@
 						<p>I design websites that look great and work seamlessly on all devices, focusing on user experience and accessibility.</p>
 					</div>
                 </div><!-- end col -->
-				<div class="col-md-4">
+				<div class="col-md-4 d-flex">
                     <div class="services-inner-box">
 						<div class="ser-icon">
 							<i class="flaticon-process"></i>
@@ -265,7 +265,7 @@
 						<p>I provide creative design services, including branding and user interfaces, to make your visual identity stand out.</p>
 					</div>
                 </div><!-- end col -->
-				<div class="col-md-4">
+				<div class="col-md-4 d-flex">
                     <div class="services-inner-box">
 						<div class="ser-icon">
 							<i class="flaticon-discuss-issue"></i>
@@ -274,7 +274,7 @@
 						<p>I offer dedicated support and comprehensive maintenance to keep your website running smoothly, efficiently, and up-to-date.</p>
 					</div>
                 </div><!-- end col -->
-				<div class="col-md-4">
+				<div class="col-md-4 d-flex">
                     <div class="services-inner-box">
 						<div class="ser-icon">
 							<i class="flaticon-idea"></i>
@@ -283,7 +283,7 @@
 						<p>I help brainstorm and refine your web project ideas, developing actionable strategies to turn your vision into reality.</p>
 					</div>
                 </div><!-- end col -->
-				<div class="col-md-4">
+				<div class="col-md-4 d-flex">
                     <div class="services-inner-box">
 						<div class="ser-icon">
 							<i class="flaticon-idea-1"></i>
