--- a/index.html
+++ b/index.html
@@ -85,20 +85,19 @@
     </nav>
 	
 	<section id="home" class="main-banner parallaxie" style="background: url('uploads/banner-01.jpg')">
-		<div class="heading">
-			<h1>hello i'm Renz</h1>
-			<p><span class="slant-quote">"The best way to predict the future is to create it."</span><br><i>-Abraham Lincoln</i></p>
-			<h3 class="cd-headline clip is-full-width">
-				<span> Welcome to My Portfolio </span><br><br>
-				<span class="cd-words-wrapper">
-					<b class="is-visible">Web Developer</b>
-					<b>UI/UX Designer</b>
-					<b>Creative Problem Solver</b>
-					<b>Digital Innovator</b>
-                    
-				</span>
-			</h3>
-		</div>
+		<div class="heading" style="text-align: center; margin-top: 50px;">
+	            <p style="font-size: 1.2rem; line-height: 1.5; margin-bottom: 20px;">
+	                <span class="slant-quote" style="font-style: italic; font-weight: bold;">"The best way to predict the future is to create it."</span>
+	                <br>
+	                <i style="font-size: 1rem; font-style: normal; color: gray;">-Abraham Lincoln</i>
+	            </p>
+	            <h3 class="cd-headline clip is-full-width" style="font-size: 2rem;">
+	                <span class="cd-words-wrapper" style="font-weight: 500;">
+	                    <b class="is-visible">Hello! I'm Renz, a Web Developer.</b>
+	                    <b>Welcome to my portfolio!</b>
+	                </span>
+	            </h3>
+	        </div>
 	</section>
 
 	<svg id="clouds" class="hidden-xs" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 85 100" preserveAspectRatio="none">
@@ -132,7 +131,7 @@
                 <div class="col-md-6">
                     <div class="message-box">                        
                         <h2>About Me.</h2>
-                        <p> Hello! My name is Renz, and I am a graduate of the First Asia Institute of Technology and Humanities, where I earned my Bachelor of Science degree in Information Technology.
+                        <p> I am a graduate of the First Asia Institute of Technology and Humanities, where I earned my Bachelor of Science degree in Information Technology.
                             During my studies, I developed a strong foundation in various aspects of technology and learned how to apply theoretical concepts to practical situations. 
                             My education has equipped me with the skills necessary to tackle challenges in the fast-paced tech industry.
                         </p>
