--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                                             <p class="help-block text-danger"></p>
                                         </div>
                                         <div class="form-group">
-                                            <input class="form-control" name="phone" type="phone" placeholder="Phone*" required>
+                                            <input class="form-control" name="phone" type="tel" placeholder="Phone*" pattern="[0-9]{10,15}" title="Please enter a valid phone number (10-15 digits)" required>
                                             <p class="help-block text-danger"></p>
                                         </div>
                                     </div>
