--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 <div class="col-md-4 d-flex">
                     <div class="services-inner-box">
                         <div class="ser-icon">
-                            <i class="fab fa-laravel" style="font-size: 60px; color: #ff2d20;"></i>
+                            <i class="fab fa-laravel icon-hover" style="font-size: 60px; color: #ff2d20;"></i>
                         </div>
                         <h2>Laravel</h2>
                         <p>Building secure, scalable, and efficient web applications using the powerful Laravel framework.</p>
@@ -180,7 +180,7 @@
                 <div class="col-md-4 d-flex">
                     <div class="services-inner-box">
                         <div class="ser-icon">
-                            <i class="fab fa-php" style="font-size: 60px; color: #777bb3;"></i>
+                            <i class="fab fa-php icon-hover" style="font-size: 60px; color: #777bb3;"></i>
                         </div>
                         <h2>PHP</h2>
                         <p>Developing dynamic backend systems with PHP, handling everything from database operations to API integrations.</p>
@@ -189,7 +189,7 @@
                 <div class="col-md-4 d-flex">
                     <div class="services-inner-box">
                         <div class="ser-icon">
-                            <i class="fab fa-js-square" style="font-size: 60px; color: #f7df1e;"></i>
+                            <i class="fab fa-js-square icon-hover" style="font-size: 60px; color: #f7df1e;"></i>
                         </div>
                         <h2>JavaScript</h2>
                         <p>Developing dynamic, interactive websites and applications with modern JavaScript frameworks and libraries.</p>
@@ -198,7 +198,7 @@
                 <div class="col-md-4 d-flex">
                     <div class="services-inner-box">
                         <div class="ser-icon">
-                            <i class="fab fa-html5" style="font-size: 60px; color: #e34c26;"></i>
+                            <i class="fab fa-html5 icon-hover" style="font-size: 60px; color: #e34c26;"></i>
                         </div>
                         <h2>HTML</h2>
                         <p>Building the structure and content of web applications using semantic HTML5 elements for accessibility and SEO.</p>
@@ -207,7 +207,7 @@
                 <div class="col-md-4 d-flex">
                     <div class="services-inner-box">
                         <div class="ser-icon">
-                            <i class="fab fa-css3-alt" style="font-size: 60px; color: #264de4;"></i>
+                            <i class="fab fa-css3-alt icon-hover" style="font-size: 60px; color: #264de4;"></i>
                         </div>
                         <h2>CSS</h2>
                         <p>Creating beautiful, responsive layouts with CSS, focusing on design, performance, and user experience across devices.</p>
@@ -216,7 +216,7 @@
                 <div class="col-md-4 d-flex">
                     <div class="services-inner-box">
                         <div class="ser-icon">
-                            <i class="fab fa-vuejs" style="font-size: 60px; color: #42b883;"></i>
+                            <i class="fab fa-vuejs icon-hover" style="font-size: 60px; color: #42b883;"></i>
                         </div>
                         <h2>Vue.js</h2>
                         <p>Crafting reactive and fast user interfaces with Vue.js, ensuring seamless user experiences on all devices.</p>
@@ -416,7 +416,7 @@
 								</div>
 								<div class="clearfix"></div>
 							</div>
-			     <form id="contactForm">
+			<form id="contactForm">
                                 <div class="row">
                                     <div class="col-md-6">
                                         <div class="form-group">
@@ -440,7 +440,7 @@
                                     </div>
                                     <div class="clearfix"></div>
                                     <div class="col-lg-12 text-center">
-                                        <div id="success"></div>
+                                        <div id="formMessage"></div> <!-- Placeholder for success/error message -->
                                         <button class="sim-btn btn-hover-new" data-text="Send Message" type="submit">Send Message</button>
                                     </div>
                                 </div>
