--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 							<a href="uploads/audio_tour.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="fa fa-picture-o"></i></a>
 						</div>
                         <div class="caption">
-                            <p>Audio Tour offers an immersive experience with audio narration as users navigate through various locations.</p>
+                            <p>Audio Tours offers an immersive experience with audio narration as users navigate through various locations.</p>
                         </div>
 					</div>
 				</div>
