--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 	            </p>
 	            <h3 class="cd-headline clip is-full-width" style="font-size: 2rem;">
 	                <span class="cd-words-wrapper" style="font-weight: 500;">
-	                    <b class="is-visible">Hello! I'm Renz, a Web Developer.</b>
+	                    <b class="is-visible">Hello! I'm Renz, a Software Developer.</b>
 	                    <b>Welcome to my portfolio!</b>
 	                </span>
 	            </h3>
