--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                             <a href="https://www.linkedin.com/in/renznatividad/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
                         </div>
                         
-                        <a href="https://github.com/rnatividad99/rnatividad99.github.io/blob/001a410a96899590a343ed2e04155fe1a0f960f4/Natividad%2C%20Renz%20Alvin%20-%20CV.pdf" target="_blank" class="sim-btn btn-hover-new" data-text="Download CV"><span>Download CV</span></a>
+                        <a href="https://github.com/rnatividad99/rnatividad99.github.io/blob/main/Natividad%20-%20Resume.pdf" target="_blank" class="sim-btn btn-hover-new" data-text="Download Resume"><span>Download Resume</span></a>
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
 
