--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                         </p>
                         <div class="hero_social">
                             <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>&nbsp;&nbsp;
-                            <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>&nbsp;&nbsp;
+                            <a href="https://www.instagram.com/gegedobolyupii/" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>&nbsp;&nbsp;
                             <a href="https://github.com/rnatividad99" target="_blank"><ion-icon name="logo-github"></ion-icon></a>&nbsp;&nbsp;
                             <a href="https://www.linkedin.com/in/renznatividad/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
                         </div>
@@ -373,7 +373,7 @@
                                         <p class="help-block text-danger"></p>
                                     </div>
                                     <div class="form-group">
-                                        <a href="#">
+                                        <a href="https://www.instagram.com/gegedobolyupii/" target="_blank">
                                             <ion-icon name="logo-instagram"></ion-icon>
                                         </a>
                                             @gegedobolyupii
